SendChatToChart fixed
