# controllers/User.js
@@ -82,3 +82,13 @@ module.exports.viewVehicleSetup = function viewVehicleSetup (req, res, next, use
       utils.writeJson(res, response);
     });
 };
+
+module.exports.viewChatWithSentChart = function viewChatwithSentChart (req, res, next, userID, chartID, chatRoomID) {
+  User.viewChatWithSentChart(userID, chartID, chatRoomID)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
